Camino only - Bug 408530: Fix Find toolbar appearance. r=alqahira sr=pink